# ppsr

./: .gitignore  README.md  restart_servers.sh  start_php_server.sh  start_servers.sh
backend/: pyproject.toml
backend/app/: main.py
backend/app/soap/: client.py  config.py  config.py.example  mock_service.py  models.py
backend/app/utils/: pdf_generator.py  stripe_utils.py
frontend/: .env  .env.example  package-lock.json  package.json
frontend/public/test/: api-test.html
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/components/layout/: MainLayout.tsx
frontend/src/components/payment/: PaymentForm.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: ChangePassword.tsx  Home.tsx  Status.tsx  VehicleSearch.tsx
php-backend/: README.md  apache.conf  composer.json
php-backend/app/Config/: SoapConfig.php
php-backend/app/Http/Controllers/: PpsrController.php
php-backend/app/Http/Requests/: ChangePasswordRequest.php  PaymentConfirmationRequest.php  PaymentIntentRequest.php  VehicleSearchRequest.php
php-backend/app/Models/: B2gCredentials.php  ChangePasswordRequest.php  ChangePasswordResponse.php  PaymentConfirmationRequest.php  PaymentConfirmationResponse.php  PaymentIntentRequest.php  PaymentIntentResponse.php  VehicleSearchRequest.php  VehicleSearchResponse.php  VehicleSearchType.php
php-backend/app/Services/: MockPpsrService.php  PpsrSoapClient.php
php-backend/app/Utils/: PdfGenerator.php  StripeUtils.php
php-backend/config/: cors.php
php-backend/routes/: api.php
